# nonebot-adapter-minecraft

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.py
.devcontainer/: devcontainer.json
.github/workflows/: codecov.yml  publish_pypi.yml  publish_pypi_with_poetry.yml  release.yml  ruff.yml
nonebot/adapter/spigot/: collator.py  event.py
nonebot/adapters/minecraft/: __init__.py  adapter.py  bot.py  bot.pyi  collator.py  compat.py  config.py  event.py  exception.py  message.py  model.py  models.py  permission.py  store.py  utils.py
nonebot/adapters/minecraft/event/: __init__.py  base.py  baseevent.py  fabric.py  folia.py  forge.py  minecraft.py  neoforge.py  spigot.py  velocity.py
nonebot/adapters/spigot/: __init__.py  adapter.py  bot.py  bot.pyi  config.py  event.py  message.py  utils.py
tests/: conftest.py  test_config.py  test_connection.py  test_event.py  test_message.py
