[tool.poetry]
name = "nonebot-adapter-minecraft"
version = "1.0.8.post5"
description = "NoneBot2与MineCraft Server互通的适配器。"
authors = ["17TheWord <17theword@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "nonebot" }]

[tool.poetry.dependencies]
python = "^3.9"
aio-mc-rcon = "^3.2.2"
pydantic = ">=1.10.0,<3.0.0,!=2.5.0,!=2.5.1"
nonebot2 = { version = "^2.2.0", extras = ["fastapi"] }

[tool.poetry.group.test.dependencies]
isort = "^5.10.1"
nonebug = "^0.3.5"
pytest-cov = "^4.0.0"
pre-commit = "^3.7.0"
pytest-asyncio = "^0.23.0"
nonebot2 = { version = "^2.2.0", extras = ["fastapi"] }

[tool.pytest.ini_options]
addopts = "--cov=nonebot/adapters/onebot --cov-report term-missing"

[tool.isort]
profile = "black"
line_length = 88
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = ["typing_extensions"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "W", "F", "UP", "C", "PYI", "PT", "Q"]
ignore = ["E402", "E501", "F401", "C901", "UP037", "UP035", "UP006", "PYI021"]

[tool.ruff.lint.per-file-ignores]
"nonebot/adapters/minecraft/__init__.py" = ["F403"]
"nonebot/adapters/minecraft/bot.pyi" = ["UP007", "PYI020"]
"nonebot/adapters/minecraft/collator.py" = ["C417"]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.data.packages]
my_package = { path = "nonebot/adapters/minecraft" }
