[project]
name = "nonebot-adapter-minecraft"
version = "1.5.2"
description = "NoneBot2与MineCraft Server互通的适配器。"
authors = [{ name = "17TheWord", email = "17theword@gmail.com" }]
requires-python = ">=3.10,<4.0"
readme = "README.md"
license = "MIT"
dependencies = [
    "aio-mc-rcon>=3.4.1,<4",
    "pydantic>=1.10.0,<3.0.0,!=2.5.0,!=2.5.1",
    "nonebot2[fastapi, httpx, websockets]>=2.2.0,<3",
]

[dependency-groups]
dev = ["pre-commit>=4.2.0,<5", "nonebot2[fastapi, httpx, websockets]>=2.2.0,<3"]

lint = ["ruff>=0.12.4,<0.13", "pre-commit>=4.2.0,<5"]

test = [
    "nonebug>=0.3.5,<0.4",
    "pytest-cov>=4.0.0,<5",
    "pytest-asyncio>=0.23.0,<0.24",
    "pytest>=8.4.1",
]

[tool.hatch.build.targets.sdist]
include = ["nonebot"]

[tool.hatch.build.targets.wheel]
include = ["nonebot"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = "--cov=nonebot/adapters/minecraft --cov-report term-missing"
filterwarnings = ["ignore:.*overrides.*:DeprecationWarning:nonebot.typing"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "F",     # Pyflakes
    "W",     # pycodestyle warnings
    "E",     # pycodestyle errors
    "I",     # isort
    "UP",    # pyupgrade
    "ASYNC", # flake8-async
    "C4",    # flake8-comprehensions
    "T10",   # flake8-debugger
    "T20",   # flake8-print
    "PYI",   # flake8-pyi
    "PT",    # flake8-pytest-style
    "Q",     # flake8-quotes
    "RUF",   # Ruff-specific rules
]
ignore = [
    "E402",
    "E501",   # module-import-not-at-top-of-file
    "UP037",  # quoted-annotation
    "RUF001", # ambiguous-unicode-character-string
    "RUF002", # ambiguous-unicode-character-docstring
    "RUF003", # ambiguous-unicode-character-comment
    "RUF006", # ambiguous-unicode-character-assignment
]

[tool.ruff.lint.per-file-ignores]
"nonebot/adapters/minecraft/__init__.py" = ["F403"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.ruff.lint.isort]
force-sort-within-sections = true
extra-standard-library = ["typing_extensions"]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[tool.data.packages]
my_package = { path = "nonebot/adapters/minecraft" }
